# FireUi

./: .gitignore  CMakeLists.txt
Docs/: performance_guidance.md  video_thread_flow.md
Src/: CMakeLists.txt
Src/FireGUI/: CMakeLists.txt  FireGuiMain.cpp  yuvframedata.h
Src/FireGUI/App/: AppLocalConfig.cpp  AppLocalConfig.h  AppMonitor.cpp
Src/FireGUI/Detector/: DetectionQueueManager.cpp  DetectionQueueManager.h  DetectorThread.cpp  DetectorThread.h  DetectorWorker.cpp  DetectorWorker.h  DetectorWorkerManager.cpp  DetectorWorkerManager.h
Src/FireGUI/Gui/: FuMainWid.cpp  FuMainWid.h  FuMainWid_Ui.cpp  FuMainWid_Ui.h
Src/FireGUI/Gui/Controls/: FuSideTabBar.h  FuSideTabBar_Ui.cpp  FuSideTabBar_Ui.h  FuVideoButtons.cpp  FuVideoButtons.h
Src/FireGUI/Gui/Pages/: FuVideoPage.cpp  FuVideoPage.h  FuVideoPage_Ui.cpp  FuVideoPage_Ui.h
Src/FireGUI/Res/: app_icon.rc
Src/FireGUI/Res/qss/: FuMainWid.css  FuVideoButtons.css
Src/FireGUI/Utils/Exception/: TFException.cpp  TFException.h
Src/FireGUI/Utils/VideoUtils/: appdata.h  devicetree.cpp  deviceurl.cpp  deviceutil.h
Src/FireUi/: CMakeLists.txt  FireEntry.cpp
Src/FireUi/App/: AppMonitor.cpp  AppMonitor.h
Src/FireUi/Gui/: FuMainWid.cpp  FuMainWid.h  FuMainWid_Ui.cpp  FuMainWid_Ui.h  FuSideTabBar.cpp  FuSideTabBar_Ui.cpp  FuSideTabBar_Ui.h
Src/FireUi/Gui/Controls/: FuVideoButtons.cpp  FuVideoButtons.h
Src/FireUi/Gui/Pages/: FuVideoPage.cpp  FuVideoPage.h  FuVideoPage_Ui.cpp  FuVideoPage_Ui.h
Src/FireUi/Res/: rc.qrc
Src/FireUi/Res/qss/: FuMainWid.css  FuVideoButtons.css
Src/FireUi/Utils/: appconfig.cpp  appdata.cpp  appstyle.cpp  dbdata.h  dbquery.cpp  dbquery.h  deviceicon.cpp  deviceicon.h  deviceurl.h  deviceutil.cpp  enableconfig.cpp
Src/FireUi/Utils/Exception/: TFError.h  TFException.h
Src/FireUi/Utils/VideoUtils/: appconfig.h  appstyle.h  dbdata.cpp  devicetree.h  enableconfig.h  otherconfig.cpp  otherconfig.h
TFConfigs/: TFConfigs.yml
